--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
     <style>
       :root {
         --background-light: #f4f7f9;
-        --background-dark: #333;
+        --background-dark: #0d1117;
         --color-light: #2c3e50;
         --color-dark: #ccc;
-        --card-background-light: #fff;
-        --card-background-dark: #444;
+        --card-background-light: #fafafa;
+        --card-background-dark: #0e1117;
         --border-light: #ddd;
         --border-dark: #555;
         --description-light: #7f8c8d;
@@ -70,12 +70,24 @@
       }
 
       .dark-mode {
-        --background-light: #333;
+        /* --background-light: #333;
         --color-light: #ccc;
         --card-background-light: #444;
         --border-light: #555;
         --description-light: #aaa;
-        --footer-color-light: #aaa;
+        --footer-color-light: #aaa; */
+        --background-light: #0d1117;
+        --background-dark: #0d1117;
+        --color-light: #ffffffb3;
+        --color-dark: #ffffffb3;
+        --card-background-light: #161b22;
+        --card-background-dark: #161b22;
+        --border-light: #2a313c;
+        --border-dark: #2a313c;
+        --description-light: #ffffffb3;
+        --description-dark: #ffffffb3;
+        --footer-color-light: #ffffffb3;
+        --footer-color-dark: #ffffffb3;
       }
 
       h1 {
@@ -267,8 +279,8 @@
         background: var(--card-background-light);
         color: var(--color-light);
         border: none;
-        border-radius: 50%;
-        padding: 8px;
+        border-radius: 100%;
+        padding: 8px 10px;
         cursor: pointer;
         font-size: 1.2rem;
         transition: background 0.3s, color 0.3s;
@@ -283,6 +295,7 @@
       .theme-toggle:hover {
         background: var(--card-background-light);
         color: var(--color-light);
+        opacity: 0.7;
       }
 
       .dark-mode .theme-toggle:hover {
@@ -367,6 +380,8 @@ Start typing your Markdown here and see the preview on the right/below!</textare
           document.getElementById("light-icon").style.display = "none";
           document.getElementById("dark-icon").style.display = "block";
         }
+
+
       };
       function renderMarkdown() {
         const markdownText = document.getElementById("markdown-input").value;
@@ -381,11 +396,11 @@ Start typing your Markdown here and see the preview on the right/below!</textare
         .addEventListener("input", renderMarkdown);
 
       function toggleTheme() {
-        document.body.classList.toggle("dark-mode");
-        document.getElementById("light-icon").style.display =
-          document.body.classList.contains("dark-mode") ? "inline" : "none";
-        document.getElementById("dark-icon").style.display =
-          document.body.classList.contains("dark-mode") ? "none" : "inline";
+        document.body.classList.toggle('dark-mode');
+            const isDarkMode = document.body.classList.contains('dark-mode');
+            document.getElementById('light-icon').style.display = isDarkMode ? 'block' : 'none';
+            document.getElementById('dark-icon').style.display = isDarkMode ? 'none' : 'block';
+            localStorage.setItem('theme', isDarkMode ? 'dark' : 'light');
       }
 
       function toggleFullscreen() {
